Fixed fonts & spacing issues

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -9,6 +9,11 @@ body {
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Montserrat,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji"
 }
 
+li {
+  padding-left: 8px;
+  margin-top: 8px;
+}
+
 .mainheading {
     padding: 1rem 0rem;
 }
@@ -331,7 +336,7 @@ span.post-read-more a:hover {
 .article-post {
     font-family: "Crimson Pro";
     font-size: 1.8rem;
-    /*line-height: 1.8;*/
+    line-height: 38px;
     color: rgba(0, 0, 0, .8);
 }
 
@@ -344,7 +349,7 @@ blockquote {
 
 .article-post p,
 .article-post blockquote {
-    margin: 0 0 1.5rem 0;
+    margin: 0 0 1.8rem 0;
 }
 
 .featured-image {
